# web_akuntansi

./: .gitignore  Dockerfile.django  Dockerfile.tailwind  Makefile  README.md  dashboard.html  docker-compose.yaml  hpp.html  index.html  pyproject.toml  requirements.txt
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_revenueitem_description.py  0003_remove_revenueitem_description_and_more.py  0004_expenseitem_expense_category_and_more.py  0005_financialreport_ptkp_status.py  0006_alter_hppentry_diskon_alter_hppentry_ongkir_and_more.py  0006_hppmanufacturefinishedgoods_hppmanufacturelabor_and_more.py  0007_alter_hppentry_diskon_alter_hppentry_ongkir_and_more.py  0007_hppmanufacturematerial_diskon_and_more.py  0008_hppmanufacturematerial_nama_bahan_baku.py  0009_hppmanufacturematerial_keterangan.py  0010_hppmanufacturewip_harga_satuan_and_more.py  0011_hppmanufacturelabor_harga_satuan_and_more.py  0012_hppmanufactureoverhead_harga_satuan_and_more.py  0013_hppmanufacturefinishedgoods_harga_satuan_and_more.py  0014_hppmanufactureproduction.py  0015_alter_hppmanufactureproduction_unique_together.py  0016_expenseitem_product_expenseitem_scope.py  0017_alter_hppmanufactureoverhead_report.py  0018_remove_financialreport_omzet_and_more.py  0019_hppmanufacturefinishedgoods_status.py
core/templatetags/: core_tags.py
core/tests/: test_hpp_calculator.py
core/utils/: excel_exporter.py  final_report.py  hpp_calculator.py  hpp_manufacture_calculator.py  pdf_exporter.py
js/: dashboard.js  script.js
sites/: settings.py  urls.py
(+29 files in other folders)
