[project]
name = "accounting-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.7",
    "django-sslserver>=0.22",
    "django-tailwind[reload]>=4.2.0",
    "honcho>=2.0.0",
    "python-dotenv>=1.1.1",
]
